apps/manufacturing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: manufacturing
  labels:
    app: manufacturing
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: manufacturing
